Added option parser.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,4 +1,5 @@
 
 ## Makefile.am: public headers.
 
-nobase_include_HEADERS = florentino/benchmark-runner.h
+nobase_include_HEADERS = florentino/benchmark-runner.h \
+                         florentino/option-parser.h
