--- a/src/florentino/Makefile.am
+++ b/src/florentino/Makefile.am
@@ -6,4 +6,5 @@ MAINTAINERCLEANFILES = Makefile.in
 lib_LTLIBRARIES = libflorentino.la
 
 libflorentino_la_CPPFLAGS = -I$(top_srcdir)/include
-libflorentino_la_SOURCES = benchmark-runner.cpp
+libflorentino_la_SOURCES = benchmark-runner.cpp \
+                           option-parser.cpp
