--- a/src/stream/Makefile.am
+++ b/src/stream/Makefile.am
@@ -7,5 +7,6 @@ bin_PROGRAMS = florentino-stream
 
 florentino_stream_CPPFLAGS = -I$(top_srcdir)/include
 florentino_stream_SOURCES = florentino-stream.cpp \
+                            benchmarks.h benchmarks.cpp \
                             cpu-stream.h cpu-stream.cpp
 florentino_stream_LDADD = $(top_builddir)/src/florentino/libflorentino.la
