--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,4 +2,6 @@
 ## Makefile.am: public headers.
 
 nobase_include_HEADERS = florentino/benchmark-runner.h \
-                         florentino/option-parser.h
+                         florentino/logstream.h \
+                         florentino/option-parser.h \
+                         florentino/clock.h
