Use array instead of vectors in CPUStream.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -4,4 +4,5 @@
 nobase_include_HEADERS = florentino/benchmark-runner.h \
                          florentino/logstream.h \
                          florentino/option-parser.h \
-                         florentino/clock.h
+                         florentino/clock.h \
+                         florentino/memory.h
